--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "Segoe UI", Arial, sans-serif;
+  line-height: 1.4;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  gap: 8px;
+}
+.input-text {
+  flex: 8;
+  font-size: 14px;
+  padding: 12px 15px;
+  border: 1px solid #cecece;
+  outline: none;
+  font-weight: 400;
+  max-width: 80%;
+}
+.select-input {
+  flex: 3;
+  font-size: 14px;
+  padding: 12px 15px;
+  border: 1px solid #cecece;
+  outline: none;
+  font-weight: 400;
+}
+.input-text::placeholder {
+  color: #999;
+}
+.input-submit {
+  flex: 2;
+  border: none;
+  background: #038203;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 600;
+  width: 20%;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+.input-submit:disabled {
+  background: grey;
+  cursor: no-drop;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:disabled {
+  background: grey;
+  cursor: no-drop;
 }
+
+.icon {
+  cursor: pointer;
+}
+
+  .checkbox-wrapper *,
+  .checkbox-wrapper ::after,
+  .checkbox-wrapper ::before {
+    box-sizing: border-box;
+  }
+  .checkbox-wrapper [type=checkbox].checkbox-field {
+    margin: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    display: inline;
+    display: inline;
+  }
+
+
+  .home {
+    height: 100vh;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
