--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,66 @@
-html, body{
+html,
+body {
   height: 100%;
-  width : 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  overflow: hidden;
+  border-left: 1px solid rgba( 1, 1, 1, 0.1);
+  border-right: 1px solid rgba( 1, 1, 1, 0.1);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+thead {
+  background-color: #450664a8;
+  border-left: 1px solid #450664a8;
+  border-right: 1px solid #450664a8;
+  color: #fff;
+}
+tbody {
+  border-left: 1px solid #bebebe;
+  border-right: 1px solid #bebebe;
+  background-color: rgba(250, 250, 250, 0.9);
+}
+th, td {
+  padding: 1rem;
+  border-bottom: 1px solid rgba( 1, 1, 1, 0.1);
+}
+
+tr {
+  padding-left: 1rem;
+}
+
+/* required css to make rounded table (below) */
+tr:first-child th:first-child {
+  border-top-left-radius: 10px;
+}
+tr:first-child th:last-child {
+  border-top-right-radius: 10px;
+}
+tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+
